--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="fill"
     android:background="@android:color/white"
     android:gravity="fill"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context=".SignalDetector">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -20,9 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingEnd="3dp"
-            android:paddingStart="0dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="3dp">
+            android:paddingStart="0dp">
 
             <TextView
                 android:id="@+id/textView1"
@@ -171,4 +171,5 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="6" />
+
 </LinearLayout>
