--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -3,11 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_item_share"
+        android:icon="@drawable/ic_share_black_24dp"
+        android:title="@string/share"
+        app:showAsAction="ifRoom"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
+
+    <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings_white_24dp"
         android:onClick="launchSettings"
         android:title="@string/title_activity_settings"
-        app:showAsAction="ifRoom|withText"></item>
+        app:showAsAction="ifRoom"></item>
 
     <item
         android:id="@+id/exit"
