--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -8,21 +8,21 @@
     android:layout_gravity="fill"
     android:background="@android:color/white"
     android:gravity="fill"
-    android:orientation="horizontal"
     tools:context=".SignalDetector">
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp" android:padding="3dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="6">
+        android:layout_weight="6"
+        android:padding="3dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingEnd="3dp"
-            android:paddingStart="0dp">
+            android:paddingStart="0dp"
+            android:paddingEnd="3dp">
 
             <TextView
                 android:id="@+id/textView1"
