--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,6 +12,10 @@
     android:orientation="vertical"
     tools:context=".SignalDetector">
 
+    <include xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <TableLayout
         android:id="@+id/TableLayout1"
         android:layout_width="fill_parent"
@@ -113,7 +117,7 @@
             <TextView
                 android:id="@+id/otherLteSites"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:text="@string/none"
                 android:textColor="@android:color/black"
