--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.SignalDetectorTheme" parent="Theme.AppCompat.Light">
+    <style name="Theme.SignalDetectorTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- your app branding color for the app bar -->
         <item name="colorPrimary">@color/primary_material_light</item>
         <!-- darker variant for the status bar and contextual app bars -->
